Dist folder fix for Surge.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Project for CS5890.",
   "main": "index.html",
   "scripts": {
-    "build": "copyfiles -u 1 src/**/* build/",
-    "prebuild": "npm run clean",
+    "build": "npm run clean && copyfiles -u 1 src/**/* build/",
     "precompile": "npm run clean",
     "clean": "rimraf dist/*",
     "pretest": "npm run lint",
