--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rimraf dist/*",
     "pretest": "npm run lint",
     "lint": "jshint src/js/*.js",
-    "server": "live-server --open='src/'"
+    "server": "live-server --open=src/"
   },
   "repository": {
     "type": "git",
